# X-Caliber

./: .coverage  .gitignore  .sisyphus-evidence-cli-functional.md  COMPLETION_SUMMARY.md  PENTEST-REPORT-photoai.com.md  README.md  TEST-RESULTS-spada-upnyk-ac-id.md  UNLOCKED-CAPABILITIES.md  ctf-results.json  example-full-recon.json  example-full-recon2.json  photoai-ctf.json  photoai-recon.json  photoai-scan.json  pyproject.toml  pytest.ini  recon-final-test.json  recon-with-subdomain.json  report.json  scan-results.json  test_verify.db
.github/workflows/: go-tests.yml
config/: default.yaml
pentest_tui/: __main__.py
recon_go/: go.mod
recon_go/httpprobe/: go.mod  httpprobe_test.go  main.go
recon_go/portscan/: README.md  VERIFICATION.md  go.mod  main.go  portscan_test.go  services.go
recon_go/subdomain/: main.go  subdomain_test.go
schemas/: ipc_protocol.json
src/: main.py
src/cli/: __init__.py  automation.py
src/core/: .gitkeep  app.py  exporter.py  go_tools.py  ipc.py  orchestrator.py  plugin.py  registry.py  session.py
src/ctf/: __init__.py  crypto.py  flag_finder.py  forensics.py  osint.py  web_solver.py
src/exploit/: __init__.py  metasploit_wrapper.py  rce_exploit.py  result_parser.py  sqli_exploit.py
src/plugins/: .gitkeep
src/report/: json_generator.py
src/scanners/: nuclei_wrapper.py  security_headers.py  vuln_classifier.py  web_vuln_scanner.py
src/ui/: .gitkeep  panel.py  sidebar.py
src/utils/: .gitkeep  external_tools.py
tests/: conftest.py  docker-compose.yml  setup_test_env.sh  test_docker_infrastructure.py
(+42 files in other folders)
